# Cerebro-legal

./: .gitignore  CORPUS_SCHEMA.md  HANDOVER.md  README.md  audit_codigos_estatales.py  audit_gaps.py  bj_multi_crawler.py  citation_extract.py  cndh_crawler.py  corteidh_crawler.py  dip_index.json  diputados_crawler.py  dof_crawler.py  dof_reparse.py  ejecutorias_crawler.py  embed_chunks.py  export_to_corpus.py  fetch_qroo_codigos.py  idh_casos.html  idh_oc.html  iuse_after_Búsqueda_avanzada.html  iuse_after_search.html  iuse_home.html  iuse_results_dump.html  legis_detail_crawler.py  legis_estatales_crawler.py  parse_sentencias_streaming.py  peek_dip.py  peek_sre.py  pilot_v2.py  probe.py  probe_bj.py  probe_ejec.py  probe_files.py  probe_final.py  probe_legis_detail.py  probe_modern.py  probe_more_bj.py  probe_tesis.py  probe_tesis_detail.py  (+54 more)
