[project]
name = "scjn-scraper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.28.1",
    "openai>=2.36.0",
    "pdfplumber>=0.11.9",
    "pgvector>=0.4.2",
    "playwright>=1.59.0",
    "psycopg[binary]>=3.3.4",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "selectolax>=0.4.8",
    "sqlite-utils>=3.39",
    "tenacity>=9.1.4",
]
